# learn-gl

./: .gitignore  README  cube.hs  cube.vert  cubeTex.frag  cubeTex.hs  cubeTex.vert  cubeTexWithLight.frag  cubeTexWithLight.hs  cubeTexWithLight.vert  cubeWithShadow.hs  empty.hs  learn-gl.cabal  shadow.frag  shadow.vert  shadowR.frag  shadowR.vert  simple.frag  simple.vert  triangle.hs
