name: learn-gl
version: 0.0.1

author: Matthew O'Connor <thegreendragon@gmail.com>


cabal-version: >= 1.10
build-type: Simple

executable empty
  default-language: Haskell2010
  main-is: empty.hs
  ghc-options: -Wall
  build-depends:
    OpenGL >= 2.9,
    GLFW-b >= 1.3,
    base < 5

executable triangle
  default-language: Haskell2010
  main-is: triangle.hs
  ghc-options: -Wall
  build-depends:
    OpenGL >= 2.9,
    GLFW-b >= 1.3,
    base < 5,
    array >= 0.4,
    bytestring >= 0.10
